src/objects/Limit__c.object
<CustomObject>
    <description>Used to store details about each limit that should be tracked</description>
    <fields>
        <fullName>AlertThreshold__c</fullName>
        <defaultValue>0.8</defaultValue>
        <inlineHelpText>If the limit exceeds the threshold, then trigger alerts</inlineHelpText>
        <label>Alert Threshold</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChangeThreshold__c</fullName>
        <defaultValue>0.2</defaultValue>
        <inlineHelpText>The threshold for the amount of change from one measurement to the other that should trigger alerts.</inlineHelpText>
        <label>Change Threshold</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <inlineHelpText>If there are any errors while retrieving the limit, they will be recorded here.</inlineHelpText>
        <label>Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRetrieveTime__c</fullName>
        <inlineHelpText>The last Date/Time a snapshot was retrieved</inlineHelpText>
        <label>Last Retrieve Time</label>
        <summarizedField>LimitSnapshot__c.CreatedDate</summarizedField>
        <summaryForeignKey>LimitSnapshot__c.Limit__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastSnapshotValue__c</fullName>
        <inlineHelpText>The value of the last snapshot taken</inlineHelpText>
        <label>Last Snapshot Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The API name of the limit that corresponds to the map in the OrgLimits class</inlineHelpText>
        <label>Limit Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MuteAlerts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To stop all alerts, check this box.</inlineHelpText>
        <label>Mute Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextRetrieveTime__c</fullName>
        <formula>LastRetrieveTime__c + (RetrieveIntervalHours__c/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The next time the limit will be retrieved</inlineHelpText>
        <label>Next Retrieve Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RetrieveIntervalHours__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>How often to retrieve this limit in hours</inlineHelpText>
        <label>Retrieve Interval (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SnapshotRetentionDays__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>The number of days to retain snapshots. Any snapshots older will be deleted. Leave blank to retain all snapshots</inlineHelpText>
        <label>Snapshot Retention (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TemporaryAlertThresholdExpiration__c</fullName>
        <inlineHelpText>When to remove the temporary alert threshold. The Temporary Alert Threshold field will be cleared at this time.</inlineHelpText>
        <label>Temporary Alert Threshold Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TemporaryAlertThreshold__c</fullName>
        <inlineHelpText>If an alert has been triggered and you want to temporarily increase the threshold</inlineHelpText>
        <label>Temporary Alert Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Limit</label>
    <nameField>
        <label>Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LMT001_TemporaryThresholdReqExpiration</fullName>
        <active>true</active>
        <description>When a temporary threshold is entered, an expiration date time is needed</description>
        <errorConditionFormula>NOT(ISBLANK(TemporaryAlertThreshold__c)) &amp;&amp; ISBLANK( TemporaryAlertThresholdExpiration__c)</errorConditionFormula>
        <errorDisplayField>TemporaryAlertThresholdExpiration__c</errorDisplayField>
        <errorMessage>When a Temporary Alert Threshold is entered, the Temporary Alert Threshold Expiration is needed. [LMT-001]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LMT002_TemporaryThresholdReqExpiration</fullName>
        <active>true</active>
        <description>When a an expiration date time is entered, temporary threshold is needed</description>
        <errorConditionFormula>ISBLANK(TemporaryAlertThreshold__c) &amp;&amp; NOT(ISBLANK( TemporaryAlertThresholdExpiration__c))</errorConditionFormula>
        <errorDisplayField>TemporaryAlertThreshold__c</errorDisplayField>
        <errorMessage>When a Temporary Alert Threshold Expiration is entered, the Temporary Alert Threshold is needed. [LMT-002]</errorMessage>
    </validationRules>
</CustomObject>